[gd_scene load_steps=9 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/WebSocketClient.gd" id="2_ws"]
[ext_resource type="Script" path="res://scripts/Intersection.gd" id="3_intersection"]
[ext_resource type="Script" path="res://scripts/VehicleManager.gd" id="4_vehicles"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="5_ui"]
[ext_resource type="Script" path="res://scripts/AudioManager.gd" id="6_audio"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_top_color = Color(0.35, 0.55, 0.85, 1)
sky_horizon_color = Color(0.65, 0.75, 0.88, 1)
ground_bottom_color = Color(0.18, 0.22, 0.15, 1)
ground_horizon_color = Color(0.55, 0.62, 0.55, 1)

[sub_resource type="Sky" id="Sky_main"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_main"]
background_mode = 2
sky = SubResource("Sky_main")
ambient_light_source = 2
ambient_light_color = Color(0.35, 0.35, 0.4, 1)
ambient_light_energy = 0.6
tonemap_mode = 3
glow_enabled = true
glow_intensity = 0.4
glow_bloom = 0.1

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("2_ws")
server_url = "ws://localhost:8765"
reconnect_delay = 3.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 15, 20, 15)
light_color = Color(1, 0.96, 0.9, 1)
light_energy = 1.3
shadow_enabled = true
directional_shadow_max_distance = 80.0

[node name="IsometricCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707, -0.354, 0.612, 0, 0.866, 0.5, -0.866, -0.354, 0.612, 25, 25, 25)
projection = 1
size = 32.0
far = 200.0

[node name="Intersection" type="Node3D" parent="."]
script = ExtResource("3_intersection")

[node name="VehicleManager" type="Node3D" parent="."]
script = ExtResource("4_vehicles")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("6_audio")

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_ui")
